URL field no longer wraps, as per Trac #1112
git-svn-id: https://svn.socialplanning.org/svn/opencore/trunk/opencore@8316 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/nui/css/opencore.css
+++ b/nui/css/opencore.css
@@ -947,6 +947,9 @@ fieldset .oc-heading-context {
 .oc-form-value {
   width: auto;
 }
+.oc-form-value.oc-form-fieldBlock {
+  white-space: nowrap;
+}
 .oc-form-help {
   display: block;
   line-height: normal;
@@ -962,9 +965,6 @@ fieldset .oc-heading-context {
   color: #F00;
   font-weight: bold;
   font-size: 11px;
-}
-.oc-form-fieldBlock {
-  /* white-space: nowrap; */
 }
 .oc-form-fieldBlock label {
   font-weight: normal;
